--- a/MyPhotoshop/MyPhotoshop.vcxproj.filters
+++ b/MyPhotoshop/MyPhotoshop.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="CImageProc.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CHistogramDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPhotoshop.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CImageProc.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CHistogramDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
