--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -185,6 +185,7 @@
   <ItemGroup>
     <ClInclude Include="CHistogramDlg.h" />
     <ClInclude Include="CImageProc.h" />
+    <ClInclude Include="CINTENSITYDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPhotoshop.h" />
@@ -197,6 +198,7 @@
   <ItemGroup>
     <ClCompile Include="CHistogramDlg.cpp" />
     <ClCompile Include="CImageProc.cpp" />
+    <ClCompile Include="CINTENSITYDlg.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPhotoshop.cpp" />
     <ClCompile Include="MyPhotoshopDoc.cpp" />
