完善了"添加椒盐噪音“的功能
添加了一个对话框，允许用户调整椒盐噪音中盐的比例

--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="MyPhotoshop.h" />
     <ClInclude Include="MyPhotoshopDoc.h" />
     <ClInclude Include="MyPhotoshopView.h" />
+    <ClInclude Include="NoiseRatioDialog.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="MyPhotoshop.cpp" />
     <ClCompile Include="MyPhotoshopDoc.cpp" />
     <ClCompile Include="MyPhotoshopView.cpp" />
+    <ClCompile Include="NoiseRatioDialog.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
