完善了“添加脉冲噪声”的功能
添加了滑块和对话框·

--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="CImageProc.h" />
     <ClInclude Include="CINTENSITYDlg.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ImpulseNoiseDialog.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPhotoshop.h" />
     <ClInclude Include="MyPhotoshopDoc.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="CHistogramDlg.cpp" />
     <ClCompile Include="CImageProc.cpp" />
     <ClCompile Include="CINTENSITYDlg.cpp" />
+    <ClCompile Include="ImpulseNoiseDialog.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPhotoshop.cpp" />
     <ClCompile Include="MyPhotoshopDoc.cpp" />
