--- a/MyPhotoshop/MyPhotoshop.vcxproj.filters
+++ b/MyPhotoshop/MyPhotoshop.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="NoiseRatioDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ImpulseNoiseDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPhotoshop.cpp">
@@ -78,6 +81,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="NoiseRatioDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ImpulseNoiseDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
