完善了“添加高斯噪声”的功能
添加了对话框和滑块

--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="CImageProc.h" />
     <ClInclude Include="CINTENSITYDlg.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GaussianNoiseDialog.h" />
     <ClInclude Include="ImpulseNoiseDialog.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPhotoshop.h" />
@@ -201,6 +202,7 @@
     <ClCompile Include="CHistogramDlg.cpp" />
     <ClCompile Include="CImageProc.cpp" />
     <ClCompile Include="CINTENSITYDlg.cpp" />
+    <ClCompile Include="GaussianNoiseDialog.cpp" />
     <ClCompile Include="ImpulseNoiseDialog.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPhotoshop.cpp" />
