--- a/MyPhotoshop/MyPhotoshop.vcxproj.filters
+++ b/MyPhotoshop/MyPhotoshop.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="ImpulseNoiseDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GaussianNoiseDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPhotoshop.cpp">
@@ -84,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ImpulseNoiseDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GaussianNoiseDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
