完善了“添加高斯白噪声”的功能
添加了对话框和滑块

--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="CINTENSITYDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GaussianNoiseDialog.h" />
+    <ClInclude Include="GaussianWhiteNoiseDialog.h" />
     <ClInclude Include="ImpulseNoiseDialog.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="MyPhotoshop.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="CImageProc.cpp" />
     <ClCompile Include="CINTENSITYDlg.cpp" />
     <ClCompile Include="GaussianNoiseDialog.cpp" />
+    <ClCompile Include="GaussianWhiteNoiseDialog.cpp" />
     <ClCompile Include="ImpulseNoiseDialog.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="MyPhotoshop.cpp" />
