--- a/MyPhotoshop/MyPhotoshop.vcxproj.filters
+++ b/MyPhotoshop/MyPhotoshop.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="GaussianNoiseDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GaussianWhiteNoiseDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPhotoshop.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="GaussianNoiseDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GaussianWhiteNoiseDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
