--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+	<ClCompile Include="FilterSizeDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CHistogramDlg.cpp" />
@@ -211,6 +212,7 @@
     <ClCompile Include="MyPhotoshopDoc.cpp" />
     <ClCompile Include="MyPhotoshopView.cpp" />
     <ClCompile Include="NoiseRatioDialog.cpp" />
+    <ClCompile Include="FilterSizeDialog.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
