实现了“均值滤波”的撤回操作功能

--- a/MyPhotoshop/MyPhotoshop.vcxproj
+++ b/MyPhotoshop/MyPhotoshop.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="CHistogramDlg.h" />
     <ClInclude Include="CImageProc.h" />
     <ClInclude Include="CINTENSITYDlg.h" />
+    <ClInclude Include="Command.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GaussianNoiseDialog.h" />
     <ClInclude Include="GaussianWhiteNoiseDialog.h" />
@@ -198,7 +199,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
-	<ClCompile Include="FilterSizeDialog.h" />
+    <ClCompile Include="FilterSizeDialog.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CHistogramDlg.cpp" />
