--- a/MyPhotoshop/MyPhotoshop.vcxproj.filters
+++ b/MyPhotoshop/MyPhotoshop.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Command.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CLOWFILTERDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyPhotoshop.cpp">
@@ -105,6 +108,9 @@
       <Filter>头文件</Filter>
     </ClCompile>
     <ClCompile Include="FilterSizeDialog.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CLOWFILTERDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
